card sp, trang chu - done

--- a/html/trangao.html
+++ b/html/trangao.html
@@ -15,21 +15,23 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      <a href="../html/gioithieuthanhvien.html">
+        <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="#" class="header__item">Áo</a>
+        <a href="../html/trangdam.html" class="header__item">Đầm</a>
+        <a href="../html/trangvay.html" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
@@ -37,13 +39,122 @@
 
     <!-- Slider -->
     <div id="slider">
-
+    
     </div>
 
     <!-- Content main -->
     <div id="container">
       <main id="content">
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-ghi-le.webp" alt="Áo ghi lê" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo ghi lê</h4>
+              <p class="item__desc-price">1.200.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-croptop-mot-vai.jpg" alt="Áo croptop hở vai" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo croptop hở vai</h4>
+              <p class="item__desc-price">1.450.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-denim.webp" alt="Áo denim" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo Denim</h4>
+              <p class="item__desc-price">1.000.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
 
+        <!-- Component 2 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-gam-hoa.webp" alt="Áo gấm hoa" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo gấm hoa</h4>
+              <p class="item__desc-price">1.200.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-cotton-den-no.webp" alt="Áo cotton nơ đen" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo cotton nơ đen</h4>
+              <p class="item__desc-price">1.300.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-gozon.jpg" alt="Áo sơ mi crepe mờ" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo sơ mi crepe mờ</h4>
+              <p class="item__desc-price">1.000.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 3 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/ao//ao-polo-cashmere.jpg" alt="Áo polo cashmere" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo polo cashmere</h4>
+              <p class="item__desc-price">1.289.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-tank-co-yen.webp" alt="Áo tank cổ yến" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo tank cổ yến</h4>
+              <p class="item__desc-price">1.400.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-hoa-tiet-xu.webp" alt="Áo họa tiết xù" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo họa tiết xù</h4>
+              <p class="item__desc-price">1.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 4 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-somi-denim.jpg" alt="Áo sơ mi denim" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo sơ mi denim</h4>
+              <p class="item__desc-price">1.400.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-somi-lua-malvina.jpg" alt="Áo sơ mi lụa" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo sơ mi lụa</h4>
+              <p class="item__desc-price">1.400.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/ao/ao-somi-va-lanh.jpg" alt="Áo sơ mi vải đen" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Áo sơ mi vải đen</h4>
+              <p class="item__desc-price">1.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
