--- a/html/trangchu.html
+++ b/html/trangchu.html
@@ -15,21 +15,23 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      <a href="../html/gioithieuthanhvien.html">
+        <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="../html/trangao.html" class="header__item">Áo</a>
+        <a href="../html/trangdam.html" class="header__item">Đầm</a>
+        <a href="../html/trangvay.html" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
@@ -37,13 +39,65 @@
 
     <!-- Slider -->
     <div id="slider">
-
+     
     </div>
 
     <!-- Content main -->
     <div id="container">
       <main id="content">
+        <!-- Tầm nhìn -->
+        <div class="content__main">
+          <div class="content__left">
+            <img src="../asset/img/trang-chu/tam--nhin.jpg" alt="Tầm nhìn" class="content__img">
+          </div>
+          <div class="content__right">
+            <h2 class="content__head">Tầm nhìn</h2>
+              <ol class="content__desc-list">
+                <li class="content__desc-item">FemmeChic - Thương hiệu thời trang của phái đẹp phấn đấu trở thành thương
+                  hiệu nổi tiếng và được nhiều chị em tin dùng nhất tại Việt Nam. 
+                </li>
+                <li class="content__desc-item">
+                  FemmeChic mong muốn tạo nên một thương hiệu Việt với đẳng cấp và chất lượng uy 
+                  tín, từ đó có thể khẳng định vị thế trên thị trường thời trang thế giới.
+                </li>
+              </ol>
+          </div>
+        </div>
 
+        <!-- Sứ mệnh -->
+        <div class="content__main">
+          <div class="content__left-sm">
+            <h2 class="content__head">Sứ mệnh</h2>
+              <ol class="content__desc-list">
+                <li class="content__desc-item">
+                  Trở thành người tiên phong của thời đại với những ý tưởng sáng tạo đi đầu trong 
+                  ngành thời trang phái đẹp.
+                </li>
+                <li class="content__desc-item">
+                  Cùng đưa thương hiệu tỏa sáng, tạo động lực cho nhau, cùng biến ý tưởng thành hiện 
+                  thực bằng tinh thần gắn kết, tương tác, biết lắng nghe và tôn trọng.
+                </li>
+                <li class="content__desc-item"> 
+                  Để tạo niềm vui và tình cảm cho khách hàng, mỗi chúng ta phải thường xuyên liên tục tỏa sáng. 
+                  Không được để cho năng lực của bản thân bị ngủ quên, không ngừng thách thức khó khăn, phải luôn 
+                  luôn tự đổi mới bản thân.
+                </li>
+                <li class="content__desc-item">
+                  Tạo ra giá trị cao bằng sự thấu hiểu, đồng cảm và những đề xuất có giá trị thật sự, thỏa mãn sự 
+                  hài lòng cho khách hàng.
+                </li>
+              </ol>
+          </div>
+          <div class="content__right-sm">
+            <img src="../asset/img/trang-chu/su-menh.jpg" alt="Sứ mệnh" class="content__img">
+          </div>
+        </div>
+
+        <!-- Site map -->
+        <div class="content__main-sitemap">
+          <h2 class="content__main-head">Site map</h2>
+          <img src="../asset/img/sitemap/sitemap.png" alt="" class="content__main-img">
+        </div>
       </main>
     </div>
 
