--- a/html/trangdam.html
+++ b/html/trangdam.html
@@ -15,21 +15,23 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      <a href="../html/gioithieuthanhvien.html">
+        <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="../html/trangao.html" class="header__item">Áo</a>
+        <a href="#" class="header__item">Đầm</a>
+        <a href="../html/trangvay.html" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
@@ -43,7 +45,117 @@
     <!-- Content main -->
     <div id="container">
       <main id="content">
+        <div class="content__main">
+          <!-- Component 1 -->
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-maxi-crepe-dinh-pha-le.jpg" alt="Đầm maxy crepe" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm maxy crepe</h4>
+              <p class="item__desc-price">1.289.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/Dam-maxi-dinh-hoa.jpg" alt="Đầm maxy đính hoa" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm maxy đính hoa</h4>
+              <p class="item__desc-price">2.487.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-Maxi-Jersey.jpg" alt="Đầm maxy jersey" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm maxy jersey</h4>
+              <p class="item__desc-price">1.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
 
+        <!-- Component 2 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-midi-lua-co-buoc.jpg" alt="Đầm midi lụa" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm midi lụa</h4>
+              <p class="item__desc-price">2.289.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-midi-luoi-xep-li.jpg" alt="Đầm midi lưới xếp li" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm midi lưới xếp li</h4>
+              <p class="item__desc-price">2.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-midi-satin.jpg" alt="Đầm midi satin" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm midi satin</h4>
+              <p class="item__desc-price">1.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 3 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-ren-corset-satin.jpg" alt="Đầm ren corset" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm ren corset</h4>
+              <p class="item__desc-price">1.300.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-somi-cotton-soc-xoan.jpg" alt="Đầm sơ mi cotton" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm sơ mi cotton</h4>
+              <p class="item__desc-price">1.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-maxi-cutout-đính-sequin.jpg" alt="Đầm maxi cutout" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm maxi cutout</h4>
+              <p class="item__desc-price">3.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 4 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-Maxi-ban-than.jpg" alt="Đầm maxi hồng" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm maxi hồng</h4>
+              <p class="item__desc-price">2.300.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-tua-rua.jpg" alt="Đầm tua rua" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm tua rua</h4>
+              <p class="item__desc-price">3.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/dress/dam-midi-day-ru.jpg" alt="Đầm midi dây rủ" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Đầm midi dây rủ</h4>
+              <p class="item__desc-price">3.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
