--- a/html/trangquan.html
+++ b/html/trangquan.html
@@ -15,21 +15,23 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
+      <a href="../html/gioithieuthanhvien.html">
       <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="../html/trangao.html" class="header__item">Áo</a>
+        <a href="#" class="header__item">Đầm</a>
+        <a href="../html/trangvay.html" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
@@ -43,7 +45,117 @@
     <!-- Content main -->
     <div id="container">
       <main id="content">
+        <div class="content__main">
+          <!-- Component 1 -->
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-bong-bay.webp" alt="Quần bóng bay" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần bóng bay</h4>
+              <p class="item__desc-price">1.289.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-cap-cao.jpg" alt="Quần cạp cao" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần cạp cao</h4>
+              <p class="item__desc-price">1.589.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-ong-dung.webp" alt="Quần ống đứng" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần ống đứng</h4>
+              <p class="item__desc-price">1.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
 
+        <!-- Component 2 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-ong-loe-lung-cao.jpg" alt="Quần ống loe" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần ống loe</h4>
+              <p class="item__desc-price">1.400.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-palazzo.jpg" alt="Quần palazzo" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần palazzo</h4>
+              <p class="item__desc-price">1.487.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-thang-Lumière.jpg" alt="Quần thẳng Lumière" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần thẳng Lumière</h4>
+              <p class="item__desc-price">1.700.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 3 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-the-thao.webp" alt="Quần thể thao" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần thể thao</h4>
+              <p class="item__desc-price">1.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-thon.webp" alt="Quần chân thon" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần chân thon</h4>
+              <p class="item__desc-price">2.000.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-vai-satin-ong-tong.webp" alt="Quần vải satin" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần vải satin</h4>
+              <p class="item__desc-price">2.200.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 4 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-short-ca-heo.webp" alt="Quần short cá heo" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần short cá heo</h4>
+              <p class="item__desc-price">1.300.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-short-denim.jpg" alt="Quần short denim" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần short denim</h4>
+              <p class="item__desc-price">1.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/quan/quan-short-cotton.jpg" alt="Quần short vải" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Quần short vải</h4>
+              <p class="item__desc-price">1.400.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
