--- a/html/trangvay.html
+++ b/html/trangvay.html
@@ -15,21 +15,23 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      <a href="../html/gioithieuthanhvien.html">
+        <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="../html/trangao.html" class="header__item">Áo</a>
+        <a href="../html/trangdam.html" class="header__item">Đầm</a>
+        <a href="#" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
@@ -43,7 +45,117 @@
     <!-- Content main -->
     <div id="container">
       <main id="content">
+        <div class="content__main">
+          <!-- Component 1 -->
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-day-mini.jpg" alt="Váy dây mini" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy dây mini</h4>
+              <p class="item__desc-price">1.200.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-lua-tay-loe.jpg" alt="Váy lụa tay lòe" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy lụa tay lòe</h4>
+              <p class="item__desc-price">2.300.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-maxi-jersey.jpg" alt="Váy maxy jersey" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy maxy jersey</h4>
+              <p class="item__desc-price">3.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
 
+        <!-- Component 2 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-midi-Poplin.jpg" alt="Váy midi poplin" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy midi poplin</h4>
+              <p class="item__desc-price">1.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-midi-satin-corset.jpg" alt="Váy midi satin" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy midi satin</h4>
+              <p class="item__desc-price">2.487.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-midi-sequin.jpg" alt="Váy midi sequin" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy midi sequin</h4>
+              <p class="item__desc-price">1.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 3 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-mini-crepe.jpg" alt="Váy midi crepe" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy midi crepe</h4>
+              <p class="item__desc-price">2.289.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-mini-vai-lanh.jpg" alt="Váy midi vải lanh" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy midi vải lanh</h4>
+              <p class="item__desc-price">3.487.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-ngan-vai-lanh.jpg" alt="Váy ngắn vải lanh" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy ngắn vải lanh</h4>
+              <p class="item__desc-price">2.600.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Component 4 -->
+        <div class="content__main">
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-ngan-xep-li.jpg" alt="Váy ngắn xếp li" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy ngắn xếp li</h4>
+              <p class="item__desc-price">1.200.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-ngan-song-cuon.jpg" alt="Váy sóng cuộn" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy sóng cuộn</h4>
+              <p class="item__desc-price">3.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+          <div class="content__item">
+            <img src="../asset/img/vay/vay-ngan-dan-gan.jpg" alt="Váy ngắn đan gân" class="content__item-img">
+            <div class="content__item-desc">
+              <h4 class="item__desc-productsname">Váy ngắn đan gân</h4>
+              <p class="item__desc-price">3.500.000 đ</p>
+              <button class="item__desc-btn">Mua ngay</button>
+            </div>
+          </div>
+        </div>
       </main>
     </div>
 
