--- a/html/dangnhap.html
+++ b/html/dangnhap.html
@@ -15,30 +15,27 @@
   <div id="wrapper">
     <!-- Header -->
     <header id="header">
-      <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      <a href="../html/gioithieuthanhvien.html">
+        <img src="../asset/img/logo/logo-final.png" alt="" class="header__loogo">
+      </a>
       <div class="header__link">
-        <a href="" class="header__item">Trang chủ</a>
-        <a href="" class="header__item">Áo</a>
-        <a href="" class="header__item">Đầm</a>
-        <a href="" class="header__item">Váy</a>
-        <a href="" class="header__item">Quần</a>
+        <a href="../html/trangchu.html" class="header__item">Trang chủ</a>
+        <a href="../html/trangao.html" class="header__item">Áo</a>
+        <a href="../html/trangdam.html" class="header__item">Đầm</a>
+        <a href="../html/trangvay.html" class="header__item">Váy</a>
+        <a href="../html/trangquan.html" class="header__item">Quần</a>
         <div class="header__item header__item-search">
           <input type="text" class="header__item-btn">
           <i class="fa-solid fa-magnifying-glass header__item-btn--icon"></i>
         </div>
-        <a href="" class="header__item header__item-user">
+        <a href="../html/dangnhap.html" class="header__item header__item-user">
           <i class="fa-solid fa-user"></i>
         </a>
-        <a href="" class="header__item header__item-cart">
+        <a href="#" class="header__item header__item-cart">
           <i class="fa-solid fa-cart-shopping"></i>
         </a>
       </div>
     </header>
-
-    <!-- Slider -->
-    <div id="slider">
-
-    </div>
 
     <!-- Content main -->
     <div id="container">
