--- a/html/dangnhap.html
+++ b/html/dangnhap.html
@@ -12,7 +12,6 @@
   <title>Đăng nhập</title>
 </head>
 <body>
-  <div id="wrapper">
     <!-- Header -->
     <header id="header">
       <a href="../html/gioithieuthanhvien.html">
@@ -37,27 +36,50 @@
       </div>
     </header>
 
-    <!-- Content main -->
-    <div id="container" class="container-fluid pt-4 p-0">
-      <main class="container p-4 bg-white">
-        <div class="card-group">
-          <div class="card m-4 border-0">
-            <img src="/asset/img/thanhVien/bich.jpg" alt="Bich" class="w-100 content__item-img">
-            <div class="card-body">
-              <h2 class="3  card-title p-2 m-0">Nguyễn Thị Ngọc Bích <br> DHHTTT18ATT</h2>
-              <p class="card-text fs-3 p-2">222637851</p>
-            </div>
+     <!-- container main -->
+     <div class="container">
+      <div class="row ">
+          <div class="col-md-6 mx-auto">
+              <div id="card-tong" class="card mt-5 ">
+                  <div class="card-header">
+                      <h2 class="card-title d-flex justify-content-center">Đăng nhập</h2>
+                  </div>
+                  <div class="card-body">
+                      <form action="#">
+                          <div class="mb-3">
+                              <label for="email" class="form-label">Email/ Số điện thoai/Tên đăng nhập</label>
+                              <input type="text" class="form-control" id="email" placeholder="Nhập email, số điện thoại hoặc tên đăng nhập">
+                          </div>
+                          <div class="mb-3">
+                              <label for="password" class="form-label">Mật khẩu</label>
+                              <input type="password" class="form-control" id="password" placeholder="Nhập mật khẩu">
+                          </div>
+                          <div class="d-grid gap-2">
+                              <a id= "bt_DN"type="submit" class="btn text-white " href="/html/trangchu.html">Đăng nhập</a>
+                              <a href="/html/trangchu.html" class="btn btn-link text-danger">Quên mật khẩu</a>
+                          </div>
+
+                          <div class="mt-3">
+                              <p id = "p_1">Hoặc đăng nhập với:</p>
+                              <div id="DangNhap_khac" class="d-flex">
+                                  <a href="/html/trangchu.html" id = "fa1"class="btn  btn-sm">
+                                      <i id="icon1" class="fab fa-facebook"></i>
+                                  </a>
+                                  <a href="/html/trangchu.html" id = "fa2" class="btn btn-sm">
+                                      <i id="icon2" class="fab fa-google"></i>
+                                  </a>
+                              </div>
+                          </div>
+
+                          <div class="mt-3 text-center">
+                              <p>Bạn chưa có tài khoản? <a href="/html/dangky.html" class="text-danger">Đăng ký</a></p>
+                          </div>
+                      </form>
+                  </div>
+              </div>
           </div>
-          <div class="card m-4 border-0">
-            <img src="/asset/img/thanhVien/thao.jpg" alt="Thao" class="w-100 content__item-img">
-            <div class="card-body">
-              <h2 class="h3 card-title p-2 m-0">Trần Thị Thanh Thảo <br> DHHTTT18ATT</h2>
-                <p class="card-text fs-3 p-2">22637851</p>
-            </div>
-          </div>
-        </div>
-      </main>
-    </div>
+      </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
