--- a/html/dangky.html
+++ b/html/dangky.html
@@ -12,7 +12,6 @@
   <title>Đăng ký</title>
 </head>
 <body>
-  <div id="wrapper">
     <!-- Header -->
     <header id="header">
       <a href="../html/gioithieuthanhvien.html">
@@ -38,11 +37,47 @@
     </header>
 
     <!-- Content main -->
-    <div id="container">
-      <main id="content">
-
-      </main>
-    </div>
+    <div class="container">
+      <div class="row ">
+        <h2 id="h2" class="text-center">ĐĂNG KÝ TÀI KHOẢN</h2>
+          <div id="form_DK" class="col-md-6 offset-md-3 ">
+              <form action="" method="post">
+                  <div class="form-group">
+                      <label for="ho">Họ:</label>
+                      <input type="text" class="form-control" id="ho" placeholder="Nhập họ của bạn">
+                  </div>
+                  <div class="form-group">
+                      <label for="ten">Tên:</label>
+                      <input type="text" class="form-control" id="ten" placeholder="Nhập tên của bạn">
+                  </div>
+                  <div class="form-group">
+                      <label for="gioiTinh">Giới tính:</label>
+                      <div class="form-check">
+                          <input type="radio" class="form-check-input" id="nu" name="gioiTinh" value="nu">
+                          <label class="form-check-label" for="nu">Nữ</label>
+                      </div>
+                      <div class="form-check " >
+                          <input type="radio" class="form-check-input " id="nam" name="gioiTinh" value="nam" checked>
+                          <label class="form-check-label" for="nam">Nam</label>
+                      </div>
+                  </div>
+                  <div class="form-group">
+                      <label for="ngaySinh">Ngày sinh:</label>
+                      <input type="date" class="form-control" id="ngaySinh" placeholder="Nhập ngày sinh của bạn">
+                  </div>
+                  <div class="form-group">
+                      <label for="email">Email:</label>
+                      <input type="email" class="form-control" id="email" placeholder="Nhập email của bạn">
+                  </div>
+                  <div class="form-group">
+                      <label for="matKhau">Mật khẩu:</label>
+                      <input type="password"  class="form-control" id="matKhau" placeholder="Nhập mật khẩu của bạn">
+                  </div>
+                  <a href="/html/trangchu.html" id="btn_DK" class="btn text-white">Đăng ký</a>
+              </form>
+          </div>
+      </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
